# advent-of-code

./: .gitignore  README.md
2023/rust/: Cargo.toml  README.md  justfile
2023/rust/daily-template/: Cargo.toml
2023/rust/daily-template/src/: part1.rs
2023/rust/day-01/: Cargo.toml
2023/rust/day-01/src/: part1.rs  part2.rs
2023/rust/day-02/: Cargo.toml
2023/rust/day-02/src/: custom_error.rs  part1.rs  part2.rs
2023/rust/day-03/: Cargo.toml
2023/rust/day-03/src/: part1.rs  part2.rs
2023/rust/day-04/: Cargo.toml
2023/rust/day-04/src/: part1.rs  part2.rs
