[package]
name = "day-01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette.workspace = true
thiserror.workspace = true
aho-corasick.workspace = true

[dev-dependencies]
rstest.workspace = true
rstest_reuse.workspace = true
